Media-Stylesheets/Media1.CSS
/* Media for small Devices  */
@media(max-width:780px) {
    #sec1 {
        padding: 80px 10px;
        padding-top: 10px;
    }

    /* Nav Bar Styling  */
    .nav-bar {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: center;
        gap: 10px;
        padding: 1% 3%;
    }

    /* Nav Lgo  */
    .nav-logo {
        width: 170px;
        padding: 1%;
    }


    /* Nav Links  */
    .nav-links {
        width: 100%;
        justify-content: flex-start;
        row-gap: 1px;
        column-gap: 25px;
    }

    /* Nav Search section  */
    /* Nav Search Head  */
    .nav-search-head>h1 {
        font-size: 1.8rem;
    }

    .nav-search-head>h3 {
        font-size: 1.1rem;
    }

    /* Nav Search inputs  */
    .nav-search-inputs>.input-container {
        width: 100%;
        height: 6vh;
    }

    /* Main  Section Styling  */

    /* Main sec 1 header  */
    #main-sec1 {
        padding: 50px 10px;
        gap: 20px;
    }

    .main-sec1-header {
        display: flex;
        align-items: center;
        justify-content: center;
        position: static;
    }

    .main-sec1-header>h3 {
        font-family: Lato, sans-serif, 'Times New Roman', Times, serif;
        font-size: 1.4rem;
        text-align: center;
    }

    /* Main Section 1 Content  */
    .main-sec1-content {
        /* border: 2px solid red; */
        width: 100%;
        margin-top: 1%;
        padding: 1%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 30px;
    }

    /* Content Box 1  */
    .main-sec1-content>.content-box-1 {
        width: 85%;
        border: 1px solid #ccc;
        padding: 2%;
    }

    /* Main Section 2 Styling  */
    #main-sec2 {
        padding: 50px 10px;
    }

    .main-sec2-header {
        width: 100%;
        padding-left: 1%;

    }

    .main-sec2-header>h3 {
        font-size: 24px;
    }

    /* Main Section 2 Navigation  */
    .sec2-img-wrapper>a {
        width: 100%;
    }

    /* Main Section 3 Styling  */
    #main-sec3 {
        padding: 50px 10px;
    }

    .sec3-header>h3 {
        font-size: 24px;
        font-weight: 600;
    }

    /* Section 3 Content  */
    .sec3-content {
        margin-top: 1%;
        padding: 2%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }


    .product-widget {
        width: 100%;
    }
}


















/* Special Media for Navbar  */
/* @media(min-height:500vh){
    .nav-bar{
        background-color: #fff;
        position: sticky;
    }
} */

